--- a/seconddoor-frontend/package.json
+++ b/seconddoor-frontend/package.json
@@ -13,8 +13,9 @@
     "axios": "^0.26.1",
     "formik": "^2.2.9",
     "graphql": "^16.3.0",
+    "iron-session": "^6.1.3",
     "next": "12.1.0",
-    "next-iron-session": "^4.2.0",
+    "next-iron-session": "4.2.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-modal": "^3.14.4",
